<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ufo_green"
    tools:context=".ui.add.add.AddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_view_action_repetitions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/arita4_t"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_subtract_repetitions"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:text="7" />

        <TextView
            android:id="@+id/text_view_action_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/arita4_m"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="대중교통 이용" />

        <TextView
            android:id="@+id/text_view_select_action_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:fontFamily="@font/arita4_m"
            android:gravity="center_vertical"
            android:text="@string/please_specify_action_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="invisible"
            app:drawableEndCompat="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_action_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_action_name"
            tools:visibility="invisible" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="32dp"
            android:elevation="8dp"
            app:cardCornerRadius="80dp"
            app:layout_constraintBottom_toTopOf="@+id/text_view_action_repetitions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_action_name">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_view_category_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/image_icon"
                    android:contentDescription="@string/category_image" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_subtract_repetitions"
            android:layout_width="48dp"
            android:layout_height="53dp"
            android:backgroundTint="@color/platinum"
            android:fontFamily="@font/arita4_b"
            android:text="-"
            android:textColor="#333"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_action_repetitions"
            app:layout_constraintEnd_toStartOf="@+id/text_view_action_repetitions"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_action_repetitions"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/button_add_repetitions"
            android:layout_width="48dp"
            android:layout_height="53dp"
            android:backgroundTint="@color/platinum"
            android:fontFamily="@font/arita4_b"
            android:text="+"
            android:textColor="#333"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_action_repetitions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/text_view_action_repetitions"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/arita4_m"
            android:text="@string/times"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_view_action_repetitions"
            app:layout_constraintEnd_toStartOf="@+id/button_add_repetitions"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_view_action_repetitions" />

        <ImageView
            android:id="@+id/image_view_search_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_image_search"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/cardView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_action_record"
        android:src="@drawable/ic_add_cross" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>